gracefully fails if .env variables for live streaming were not found

--- a/example/multi-user-3d-web-experience/server/mml-documents/live-stream.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/live-stream.html
@@ -71,6 +71,14 @@
   }
 
   function watchStream() {
+    if (!streamURL.includes("cloudflare")) {
+      // checks for server-side URL replacement
+      return;
+    }
+    if (!streamCheckURL.includes("http")) {
+      // checks for server-side URL replacement
+      return;
+    }
     const now = document.timeline.currentTime;
     if (now - lastStreamRequestTime < minimumRequestIntervalInSeconds * 1000) return;
     
