--- a/example/multi-user-3d-web-experience/server/mml-documents/fallguys-game.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/fallguys-game.html
@@ -12,6 +12,290 @@
 </m-group>
 
 <script>
+  class Respawner {
+    constructor(parentElement, originYPosition, targetYPosition, immediate = false) {
+      this.parentElement = parentElement;
+      this.originYPosition = originYPosition;
+      this.targetYPosition = targetYPosition;
+      this.immediate = immediate;
+
+      this.transporterDelay = 150;
+      this.transporterRadius = 2.5;
+      this.transporterThickness = 0.03;
+      this.transporterColor = "#4D96ED";
+      this.transporterOpacity = 0.001;
+      this.transporterCastShadows = false;
+      this.transporterVisible = true;
+
+      if (this.immediate) {
+        this.transporterOpacity = 0;
+        this.transporterCastShadows = false;
+        this.transporterVisible = false;
+      }
+
+      this.teleportAudioURL = "/assets/playground/sfx_portal_through.mp3";
+      this.teleportAudioArraySize = 10;
+      this.teleportAudioArray = [];
+
+      this.respawnerWidth = 9900;
+      this.respawnerHeight = 1.2;
+      this.respawnerDepth = 9900;
+
+      this.usersColliding = new Set();
+
+      this.respawner = this.createCube(
+        0,
+        this.originYPosition,
+        0,
+        this.respawnerWidth,
+        this.respawnerHeight,
+        this.respawnerDepth,
+        0,
+        "#ffffff",
+        false,
+      );
+      this.parentElement.appendChild(this.respawner);
+
+      this.createTransporter = this.createTransporter.bind(this);
+      this.shiftTeleportAudioArray = this.shiftTeleportAudioArray.bind(this);
+
+      this.populateTeleportAudioArray();
+      this.setEventListeners();
+    }
+
+    setEventListeners() {
+      this.respawner.setAttribute("collision-interval", 250);
+
+      this.respawner.addEventListener("collisionstart", (e) => {
+        if (!this.usersColliding.has(e.detail.connectionId)) {
+          this.usersColliding.add(e.detail.connectionId);
+          const worldY = this.originYPosition;
+          const { x, y, z } = e.detail.position;
+          this.createTransporter(x, worldY + y, z);
+        }
+      });
+
+      this.respawner.addEventListener("collisionmove", (e) => {
+        if (!this.usersColliding.has(e.detail.connectionId)) {
+          this.usersColliding.add(e.detail.connectionId);
+          const worldY = this.originYPosition;
+          const { x, y, z } = e.detail.position;
+          this.createTransporter(x, y, z);
+        }
+      });
+
+      this.respawner.addEventListener("collisionend", (e) => {
+        if (this.usersColliding.has(e.detail.connectionId)) {
+          this.usersColliding.delete(e.detail.connectionId);
+        }
+      });
+
+      window.addEventListener("disconnected", (e) => {
+        if (this.usersColliding.has(e.detail.connectionId)) {
+          this.usersColliding.delete(e.detail.connectionId);
+        }
+      });
+    }
+
+    createCube(x, y, z, width, height, depth, opacity, color = "#aaaaaa", castShadows = true) {
+      const cube = document.createElement("m-cube");
+      cube.setAttribute("x", x);
+      cube.setAttribute("y", y);
+      cube.setAttribute("z", z);
+      cube.setAttribute("width", width);
+      cube.setAttribute("depth", depth);
+      cube.setAttribute("height", height);
+      cube.setAttribute("color", color);
+      cube.setAttribute("opacity", opacity);
+      cube.setAttribute("cast-shadows", castShadows);
+      return cube;
+    }
+
+    createCylinder(x, y, z, radius, height, opacity, color = "#aaaaaa", castShadows = true) {
+      const cylinder = document.createElement("m-cylinder");
+      cylinder.setAttribute("x", x);
+      cylinder.setAttribute("y", y);
+      cylinder.setAttribute("z", z);
+      cylinder.setAttribute("radius", radius);
+      cylinder.setAttribute("height", height);
+      cylinder.setAttribute("color", color);
+      cylinder.setAttribute("opacity", opacity);
+      cylinder.setAttribute("cast-shadows", castShadows);
+      return cylinder;
+    }
+
+    createAudio(index) {
+      const audio = document.createElement("m-audio");
+      audio.setAttribute("id", `teleport-audio-${index}`);
+      audio.setAttribute("x", this.respawnerWidth);
+      audio.setAttribute("y", this.respawnerHeight);
+      audio.setAttribute("z", this.respawnerDepth);
+      audio.setAttribute("volume", 0);
+      audio.setAttribute("loop", false);
+      audio.setAttribute("src", this.teleportAudioURL);
+      audio.setAttribute("start-time", document.timeline.currentTime - 2000);
+      audio.setAttribute("pause-time", document.timeline.currentTime);
+      audio.setAttribute("volume", 1);
+      return audio;
+    }
+
+    populateTeleportAudioArray() {
+      for (let i = 0; i < this.teleportAudioArraySize; i++) {
+        const audio = this.createAudio(i);
+        this.parentElement.appendChild(audio);
+        this.teleportAudioArray.push(audio);
+      }
+    }
+
+    shiftTeleportAudioArray() {
+      const audio = this.teleportAudioArray.shift();
+      this.teleportAudioArray.push(audio);
+      return audio;
+    }
+
+    createTransporter(x, y, z) {
+      const transporter = this.createCylinder(
+        x,
+        y,
+        z,
+        this.transporterRadius,
+        this.transporterThickness,
+        this.transporterOpacity,
+        this.transporterColor,
+        this.transporterCastShadows,
+      );
+      transporter.setAttribute("visible", this.transporterVisible);
+      this.parentElement.appendChild(transporter);
+
+      const animate = (element, attr, start, end, duration, easing, loop = false) => {
+        const anim = document.createElement("m-attr-anim");
+        anim.setAttribute("attr", attr);
+        anim.setAttribute("start", start);
+        anim.setAttribute("end", end);
+        anim.setAttribute("start-time", document.timeline.currentTime);
+        anim.setAttribute("end-time", document.timeline.currentTime + duration);
+        anim.setAttribute("duration", duration);
+        anim.setAttribute("easing", easing);
+        anim.setAttribute("loop", loop);
+        element.appendChild(anim);
+        setTimeout(() => {
+          element.setAttribute(attr, end);
+          element.removeChild(anim);
+        }, duration);
+        return anim;
+      };
+
+      const createSequence = (element, sequence, easing, duration, pauses, loop = false) => {
+        const timeAction = (cb, delay) => setTimeout(() => cb(), delay);
+
+        const animSequence = [];
+        for (let i = 0; i < sequence.length; i++) {
+          const seq = sequence[i];
+          if (Array.isArray(seq)) {
+            const subSeqArr = [];
+            for (let j = 0; j < seq.length; j++) {
+              const subSeq = seq[j];
+              subSeqArr.push(() =>
+                animate(element, subSeq.attr, subSeq.start, subSeq.end, duration, easing),
+              );
+            }
+            animSequence.push(subSeqArr);
+          } else {
+            animSequence.push(() =>
+              animate(
+                element,
+                sequence[i].attr,
+                sequence[i].start,
+                sequence[i].end,
+                duration,
+                easing,
+              ),
+            );
+          }
+        }
+
+        const seqSize = animSequence.length;
+        const seqDuration = seqSize * duration + seqSize * pauses;
+
+        const playSeq = () => {
+          for (let i = 0; i < seqSize; i++) {
+            if (typeof animSequence[i] === "function") {
+              timeAction(animSequence[i], duration * i + pauses * i);
+            } else if (Array.isArray(animSequence[i])) {
+              for (let j = 0; j < animSequence[i].length; j++) {
+                timeAction(animSequence[i][j], duration * i + pauses * i);
+              }
+            }
+          }
+        };
+
+        playSeq();
+        if (loop === true) {
+          setInterval(() => playSeq(), seqDuration);
+        } else {
+          setTimeout(() => element.remove() + 100, seqDuration);
+        }
+      };
+
+      const randomIntPoN = (val) => {
+        val = Math.abs(val);
+        return Math.floor(Math.random() * (val * 2 + 1)) - val;
+      };
+
+      const coinFlip = Math.random() < 0.5 ? -1 : 1;
+
+      const firstX = (-10 - Math.random() * 20) * coinFlip;
+      const firstY = this.targetYPosition - 15 + Math.random() * 20;
+      const firstZ = -70 + randomIntPoN(10);
+
+      const secondX = Math.random() * 10 * coinFlip;
+      const secondY = this.targetYPosition + 20 + Math.random() * 10;
+      const secondZ = -30 + Math.random() * 20;
+
+      const finalX = randomIntPoN(12);
+      const finalZ = randomIntPoN(10);
+
+      const transportSequence = [
+        [
+          { attr: "x", start: x, end: firstX },
+          { attr: "y", start: y, end: firstY },
+          { attr: "z", start: z, end: firstZ },
+        ],
+        [
+          { attr: "x", start: firstX, end: secondX },
+          { attr: "y", start: firstY, end: secondY },
+          { attr: "z", start: firstZ, end: secondZ },
+        ],
+        [
+          { attr: "x", start: secondX, end: finalX },
+          { attr: "y", start: secondY, end: this.targetYPosition - this.transporterThickness },
+          { attr: "z", start: secondZ, end: finalZ },
+        ],
+      ];
+      if (this.immediate) {
+        const audio = this.shiftTeleportAudioArray();
+        const now = document.timeline.currentTime;
+        audio.setAttribute("start-time", now);
+        audio.setAttribute("pause-time", now + 2000);
+        audio.setAttribute("x", x);
+        audio.setAttribute("y", y);
+        audio.setAttribute("z", z);
+
+        setTimeout(() => {
+          audio.setAttribute("x", finalX);
+          audio.setAttribute("y", this.targetYPosition - this.transporterThickness);
+          audio.setAttribute("z", finalZ);
+          transporter.setAttribute("x", finalX);
+          transporter.setAttribute("y", this.targetYPosition - this.transporterThickness);
+          transporter.setAttribute("z", finalZ);
+          setTimeout(() => transporter.remove(), this.transporterDelay);
+        }, this.transporterDelay);
+      } else {
+        createSequence(transporter, transportSequence, "easeInOutQuart", 1500, 0, false);
+      }
+    }
+  }
+
   function createFallGuys(gameYPosition, gamePartsYPos, teleporterSkinOffset) {
     const fallGuysGroup = document.getElementById("fall-guys-group");
     fallGuysGroup.setAttribute("y", gameYPosition);
@@ -61,47 +345,6 @@
     const movementDuration = 15;
     const stepDepth = depth / numberOfPlatforms;
 
-    function randomIntPoN(val) {
-      val = Math.abs(val);
-      return Math.floor(Math.random() * (val * 2 + 1)) - val;
-    }
-
-    function createCube(
-      x,
-      y,
-      z,
-      width,
-      height,
-      depth,
-      opacity,
-      color = "#aaaaaa",
-      castShadows = true,
-    ) {
-      const cube = document.createElement("m-cube");
-      cube.setAttribute("x", x);
-      cube.setAttribute("y", y);
-      cube.setAttribute("z", z);
-      cube.setAttribute("width", width);
-      cube.setAttribute("depth", depth);
-      cube.setAttribute("height", height);
-      cube.setAttribute("color", color);
-      cube.setAttribute("opacity", opacity);
-      cube.setAttribute("cast-shadows", castShadows);
-      return cube;
-    }
-
-    function createCylinder(x, y, z, radius, height, opacity, color = "#aaaaaa") {
-      const cube = document.createElement("m-cylinder");
-      cube.setAttribute("x", x);
-      cube.setAttribute("y", y);
-      cube.setAttribute("z", z);
-      cube.setAttribute("radius", radius);
-      cube.setAttribute("height", height);
-      cube.setAttribute("color", color);
-      cube.setAttribute("opacity", opacity);
-      return cube;
-    }
-
     function animate(element, attr, start, end, duration, easing, loop = false) {
       const anim = document.createElement("m-attr-anim");
       anim.setAttribute("attr", attr);
@@ -133,153 +376,6 @@
       return anim;
     }
 
-    function createSequence(element, sequence, easing, duration, pauses, loop = false) {
-      const timeAction = (cb, delay) => setTimeout(() => cb(), delay);
-
-      const animSequence = [];
-      for (let i = 0; i < sequence.length; i++) {
-        const seq = sequence[i];
-        if (Array.isArray(seq)) {
-          const subSeqArr = [];
-          for (let j = 0; j < seq.length; j++) {
-            const subSeq = seq[j];
-            subSeqArr.push(() =>
-              animate(element, subSeq.attr, subSeq.start, subSeq.end, duration, easing),
-            );
-          }
-          animSequence.push(subSeqArr);
-        } else {
-          animSequence.push(() =>
-            animate(
-              element,
-              sequence[i].attr,
-              sequence[i].start,
-              sequence[i].end,
-              duration,
-              easing,
-            ),
-          );
-        }
-      }
-
-      const seqSize = animSequence.length;
-      const seqDuration = seqSize * duration + seqSize * pauses;
-
-      const playSeq = () => {
-        for (let i = 0; i < seqSize; i++) {
-          if (typeof animSequence[i] === "function") {
-            timeAction(animSequence[i], duration * i + pauses * i);
-          } else if (Array.isArray(animSequence[i])) {
-            for (let j = 0; j < animSequence[i].length; j++) {
-              timeAction(animSequence[i][j], duration * i + pauses * i);
-            }
-          }
-        }
-      };
-
-      playSeq();
-      if (loop === true) {
-        setInterval(() => playSeq(), seqDuration);
-      } else {
-        setTimeout(() => element.remove() + 100, seqDuration);
-      }
-    }
-
-    function createTransporter(x, y, z, targetY) {
-      const size = 1.5;
-      const thickness = 0.03;
-      const transporter = createCylinder(x, y, z, size, thickness, 1.0, "#4D96ED");
-
-      const coinFlip = Math.random() < 0.5 ? -1 : 1;
-
-      const firstX = (-10 - Math.random() * 20) * coinFlip;
-      const firstY = targetY - 15 + Math.random() * 20;
-      const firstZ = -70 + randomIntPoN(10);
-
-      const secondX = Math.random() * 10 * coinFlip;
-      const secondY = targetY + 20 + Math.random() * 10;
-      const secondZ = -30 + Math.random() * 20;
-
-      const finalX = randomIntPoN(12);
-      const finalZ = randomIntPoN(10);
-
-      const transportSequence = [
-        [
-          { attr: "x", start: x, end: firstX },
-          { attr: "y", start: y, end: firstY },
-          { attr: "z", start: z, end: firstZ },
-        ],
-        [
-          { attr: "x", start: firstX, end: secondX },
-          { attr: "y", start: firstY, end: secondY },
-          { attr: "z", start: firstZ, end: secondZ },
-        ],
-        [
-          { attr: "x", start: secondX, end: finalX },
-          { attr: "y", start: secondY, end: targetY - thickness },
-          { attr: "z", start: secondZ, end: finalZ },
-        ],
-      ];
-      createSequence(transporter, transportSequence, "easeInOutQuart", 1500, 0, false);
-      fallGuysGroup.appendChild(transporter);
-    }
-
-    function createRespawner(targetY) {
-      const respawnerWidth = 9900;
-      const respawnerHeight = 0.2;
-      const respawnerDepth = 9900;
-      const usersColliding = new Set();
-      const respawner = createCube(
-        0,
-        0,
-        0,
-        respawnerWidth,
-        respawnerHeight,
-        respawnerDepth,
-        0,
-        "#ffffff",
-        false,
-      );
-      respawner.setAttribute("collision-interval", 250);
-      respawner.addEventListener("collisionstart", (e) => {
-        if (!usersColliding.has(e.detail.connectionId)) {
-          usersColliding.add(e.detail.connectionId);
-          const { x, y, z } = e.detail.position;
-          const worldX = x * respawnerWidth;
-          const worldY = y * respawnerHeight - respawnerHeight * 1.9;
-          const worldZ = z * respawnerDepth;
-          const height = respawnerHeight / 2;
-          createTransporter(worldX, worldY, worldZ, targetY);
-        }
-      });
-      respawner.addEventListener("collisionend", (e) => {
-        if (usersColliding.has(e.detail.connectionId)) {
-          usersColliding.delete(e.detail.connectionId);
-        }
-      });
-      respawner.addEventListener("collisionmove", (e) => {
-        if (!usersColliding.has(e.detail.connectionId)) {
-          usersColliding.add(e.detail.connectionId);
-          const { x, y, z } = e.detail.position;
-          const worldX = x * respawnerWidth;
-          const worldY = y * respawnerHeight - respawnerHeight * 1.9;
-          const worldZ = z * respawnerDepth;
-          const height = respawnerHeight / 2;
-          createTransporter(worldX, worldY, worldZ);
-        }
-      });
-      window.addEventListener("disconnected", (e) => {
-        if (usersColliding.has(e.detail.connectionId)) {
-          usersColliding.delete(e.detail.connectionId);
-        }
-        if (usersInRange.has(e.detail.connectionId)) {
-          usersInRange.delete(e.detail.connectionId);
-        }
-      });
-
-      fallGuysGroup.appendChild(respawner);
-    }
-
     function updateGroupVisibility(group, visibilityString) {
       const currentVisibility = group.getAttribute("visible-to");
       if (currentVisibility !== visibilityString) {
@@ -299,7 +395,6 @@
       const positionProbe = document.createElement("m-position-probe");
       positionProbe.setAttribute("interval", 444);
       positionProbe.setAttribute("range", 400);
-      // positionProbe.setAttribute("range", 257);
       positionProbe.setAttribute("z", 250);
       positionProbe.setAttribute("debug", false);
 
@@ -836,7 +931,8 @@
     }
 
     createMovingSteps(20, gamePartsYPos - 0.05);
-    createRespawner(gamePartsYPos);
+    new Respawner(fallGuysGroup, gamePartsYPos - 50, gamePartsYPos, true);
+
     createStart(gamePartsYPos);
     createSpinnersInHexGrid(32.6, gamePartsYPos, 35, 19, 2900);
     createHammers(88, gamePartsYPos);
