--- a/example/multi-user-3d-web-experience/server/mml-documents/playground.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/playground.html
@@ -453,42 +453,48 @@
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
       } else if (i === 6) {
-        mFrame.setAttribute("src", "wss:///mml-documents/agent.html");
+        mFrame.setAttribute("src", "wss:///mml-documents/chess-room.html");
         mFrame.setAttribute("x", x);
         mFrame.setAttribute("y", mmlDocYPos);
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
       } else if (i === 7) {
-        mFrame.setAttribute("src", "wss:///mml-documents/magic-stairs.html");
+        mFrame.setAttribute("src", "wss:///mml-documents/agent.html");
         mFrame.setAttribute("x", x);
         mFrame.setAttribute("y", mmlDocYPos);
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
       } else if (i === 8) {
-        mFrame.setAttribute("src", "wss:///mml-documents/dice.html");
+        mFrame.setAttribute("src", "wss:///mml-documents/magic-stairs.html");
         mFrame.setAttribute("x", x);
         mFrame.setAttribute("y", mmlDocYPos);
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
       } else if (i === 9) {
-        mFrame.setAttribute("src", "wss:///mml-documents/tic-tac-toe.html");
+        mFrame.setAttribute("src", "wss:///mml-documents/dice.html");
         mFrame.setAttribute("x", x);
         mFrame.setAttribute("y", mmlDocYPos);
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
       } else if (i === 10) {
-        mFrame.setAttribute("src", "wss:///mml-documents/live-stream.html");
+        mFrame.setAttribute("src", "wss:///mml-documents/tic-tac-toe.html");
         mFrame.setAttribute("x", x);
         mFrame.setAttribute("y", mmlDocYPos);
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
       } else if (i === 11) {
-        mFrame.setAttribute("src", "wss:///mml-documents/piano.html");
+        mFrame.setAttribute("src", "wss:///mml-documents/live-stream.html");
         mFrame.setAttribute("x", x);
         mFrame.setAttribute("y", mmlDocYPos);
         mFrame.setAttribute("z", z);
         mFrame.setAttribute("ry", ry);
       } else if (i === 12) {
+        mFrame.setAttribute("src", "wss:///mml-documents/piano.html");
+        mFrame.setAttribute("x", x);
+        mFrame.setAttribute("y", mmlDocYPos);
+        mFrame.setAttribute("z", z);
+        mFrame.setAttribute("ry", ry);
+      } else if (i === 13) {
         mFrame.setAttribute("src", "wss:///mml-documents/links.html");
         mFrame.setAttribute("x", x);
         mFrame.setAttribute("y", mmlDocYPos);
@@ -503,7 +509,7 @@
     altarsGroup.setAttribute("y", 0);
   }
 
-  placeAltars(altarsGroup, 42, 13);
+  placeAltars(altarsGroup, 42, 14);
   placeWind(42, 6);
 
   new Respawner(contentGroup, -50, 0, true);
