--- a/example/multi-user-3d-web-experience/server/mml-documents/playground.html
+++ b/example/multi-user-3d-web-experience/server/mml-documents/playground.html
@@ -462,7 +462,7 @@
   }
 
   placeAltars(altarsGroup, 42, 14);
-  placeWind(42, 6);
+  // placeWind(42, 6);
 
   new Respawner(contentGroup, -50, 0, true);
 
